- fixed minor responsive bugs in the music player 'expand view' - resized the slider to take a better look on mobile - tested with polypane for responsiveness - currently pushing and merging changes to see text on mobile

--- a/factory/factory.css
+++ b/factory/factory.css
@@ -37,7 +37,6 @@ h4 {
 }
 
 .top {
-  flex: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -82,6 +81,7 @@ h4 {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  width: 90%;
 }
 
 .options>i {
@@ -96,6 +96,8 @@ h4 {
 }
 
 .sliderArea {
+  width: 100%;
+  height: fit-content;
   display: flex;
   gap: 10px;
   justify-content: center;
@@ -141,8 +143,11 @@ h4 {
   }
 
   .top {
-    display: grid;
-    grid-template: 1fr/ 1fr auto;
+    /* display: grid;
+    grid-template: 1fr/ 1fr auto; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .coreArea {
@@ -172,6 +177,10 @@ h4 {
   .thumbnail {
     width: 120px;
     height: 90px;
+  }
+
+  #slider {
+    width: 80%;
   }
 }
 
